# fastapi-sqlalchemy-asyncpg

./: .coveragerc  .env  .gitignore  .secrets  Dockerfile  LICENSE  Makefile  Pipfile  README.md  alembic.ini  compose-ha.yml  compose.yml  config.ini  docker-compose.test.yml  docker-compose.yml  granian-compose.yml  logging-config.json  logging-granian.json  pyproject.toml  pytest.ini  requirements.txt  test-compose.yml  uvicorn-logging-old.json  uvicorn-logging.json  valkey-compose.yml
.github/workflows/: build-and-test.yml
alembic/: README  env.py  script.py.mako
alembic/versions/: 20230311_2008_0d1ee3949d21_init_migrations.py  20230722_1219_2dcc708f88f8_user_auth.py  20240102_2012_68cd4c3a0af0_.py  20241122_1212_0c69050b5a3e_init.py  20250729_1521_d021bd4763a5_add_json_chaos.py  421df2c2140f_init_tables.py  957232a5b7ee_initialize_happy_cog_and_shakespeare_.py
app/: config.py  database.py  exception_handlers.py  exceptions.py  logging.py  main.py  redis.py  server.py  utils.py
app/api/: health.py  ml.py  nonsense.py  shakespeare.py  stuff.py  user.py
app/exception_handlers/: __init__.py  base.py  database.py  registry.py  validation.py
app/middleware/: profiler.py
app/models/: __init__.py  base.py  nonsense.py  shakespeare.py  stuff.py  user.py
app/schemas/: nnonsense.py  shakespeare.py  stuff.py  user.py
app/services/: auth.py  llm.py  logging.py  scheduler.py  smtp.py
app/utils/: decorators.py  logging.py  singleton.py
db/: Dockerfile  create.sql  shakespeare_chapter.sql  shakespeare_character.sql  shakespeare_character_work.sql  shakespeare_wordform.sql  shakespeare_work.sql
nginx/: Dockerfile  nginx.conf
performance/: locustfile.py
templates/: index.html
tests/: chat.py  conftest.py
tests/api/: nonsense.xlsx  test_auth.py  test_health.py  test_import_xlsx.py  test_stuff.py
tests/app/: config.py  database.py  main.py
tests/app/api/: nonsense.py  shakespeare.py  stuff.py
tests/app/models/: base.py  nonsense.py  shakespeare.py  stuff.py
the_app/: config.py  database.py  main.py  utils.py
the_app/api/: nonsense.py  shakespeare.py  stuff.py  upload_csv.py
the_app/models/: __init__.py  base.py  nonsense.py  shakespeare.py  stuff.py
the_app/schemas/: nnonsense.py  stuff.py
